17973
Consider this code:

{code}scala> Function.tupled((n:Int) => (m:Int) => n + m){code}

I think the following error could be a bit less excessive:
```scala
<console>:8: error: overloaded method value tupled with alternatives:
  [a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a4(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a5, b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)](f: (a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a4(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a5) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled))((a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a4(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a5)) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled) <and>
  [a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a4(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)](f: (a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a4(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled))((a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a4(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled))) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled) <and>
  [a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3, b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)](f: (a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled))((a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a3)) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled) <and>
  [a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)](f: (a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled))((a1(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled), a2(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled))) => b(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)(in method tupled)
 cannot be applied to (Int => (Int => Int))
              Function.tupled((n:Int) => (m:Int) => n + m) 
                       ^
```

This seems to be a regression in 2.10/2.11, because in 2.9.2 I get this:
```scala
<console>:8: error: overloaded method value tupled with alternatives:
  [a1, a2, a3, a4, a5, b](f: (a1, a2, a3, a4, a5) => b)((a1, a2, a3, a4, a5)) => b <and>
  [a1, a2, a3, a4, b](f: (a1, a2, a3, a4) => b)((a1, a2, a3, a4)) => b <and>
  [a1, a2, a3, b](f: (a1, a2, a3) => b)((a1, a2, a3)) => b <and>
  [a1, a2, b](f: (a1, a2) => b)((a1, a2)) => b
 cannot be applied to (Int => (Int => Int))
              Function.tupled((n:Int) => (m:Int) => n + m)
                       ^
```
